      will download them from unstable, not testing, which is appropriate
      given a) d-i's current, forked state and b) the kernel ABI's current,
      fucked state.
    - However, in release builds of the package, this is unset, so those will
      pull udebs from sarge as previously.
    - Fix SUITE setting so debian/rules can override it. I guess this never
      worked as intended before!
  * Thiemo Seufer
    - Do an e2fsck for the extra floppy images.
    - Handle sparse files in cramfs images more efficiently.
    - Use cramfs images for mips/r4k-ip22 and mips/r5k-ip22.
    - Add cramfsprogs build-dep for mips.
  * Colin Watson
    - Add acpi-modules to the amd64 cdrom, hd-media, monolithic, and netboot
      initrds, so that rootskel can turn the fan on.
    - Use dependency resolution for ide-modules, nic-modules,
      pcmcia-storage-modules, scsi-common-modules, scsi-modules, and
      usb-storage-modules on powerpc, and remove several modules from
      powerpc-extra-modules that only belong on certain images. This removes
      cdrom-core-modules and fs-common-modules from netboot images, and adds
      parport-modules to apus/cdrom (I think it was missing by mistake).
    - Add support for kernel-specific pkg-lists entries: use lines like
      "package [2.2 2.4]" or "package * [2.6]". Should eventually form a
      simpler replacement for the kernel_specific directory.
    - Include initrd.list on amd64/i386 images.
  * Christian Perrier
    - Add 7 missing characters to installer/build/needed-characters/ar
      Thanks to Naidim Shaikli and Arabeyes contributors
    _ Add the list of needed characters for Belarussian
  * Martin Michlmayr
    - Add a ramdisk_size parameter to sb1-swarm-bn's boot configuration
      file since the initrd is now bigger than what the kernel expects.
  * Stephen R. Marenka
    - Add m68k/amiga startup scripts with thanks to and the permission of
      Christian T. Steigies <cts@debian.org>.
