@@ -26,19 +26,19 @@ include config/m68k/common.cfg
 
 $(SOME_DEST)/$(EXTRANAME)tftplilo.conf: boot/m68k/vme-tftplilo.conf
 	cp $< $@
-	./update-manifest $@ $(MANIFEST-CONFIG)
+	update-manifest $@ $(MANIFEST-CONFIG)
 
 $(SOME_DEST)/$(EXTRANAME)tftplilo.txt: boot/m68k/vme-tftplilo.txt
 	cp $< $@
-	./update-manifest $@ $(MANIFEST-DOCS)
+	update-manifest $@ $(MANIFEST-DOCS)
 
 $(SOME_DEST)/$(EXTRANAME)tftplilo.bvme: /boot/tftplilo.bvme
 	cp $< $@
-	./update-manifest $@ $(MANIFEST-TFTP-B)
+	update-manifest $@ $(MANIFEST-TFTP-B)
 
 $(SOME_DEST)/$(EXTRANAME)tftplilo.mvme: /boot/tftplilo.mvme
 	cp $< $@
-	./update-manifest $@ $(MANIFEST-TFTP-M)
+	update-manifest $@ $(MANIFEST-TFTP-M)
 
 TARGET = $(INITRD) $(INITRD22) $(SOME_DEST)/$(EXTRANAME)tftplilo.conf $(SOME_DEST)/$(EXTRANAME)tftplilo.txt $(SOME_DEST)/$(EXTRANAME)tftplilo.bvme $(SOME_DEST)/$(EXTRANAME)tftplilo.mvme
 
