@@ -17,7 +17,7 @@ arch_boot:
 # Add the kernel iamge as srec
 $(SOME_DEST)/$(EXTRANAME)vmlinux.srec:
 	objcopy -O srec $(TEMP_KERNEL) $(SOME_DEST)/$(EXTRANAME)vmlinux.srec
-	./update-manifest $@ "kernel image for XXS1500 machines"
+	update-manifest $@ "kernel image for XXS1500 machines"
 
 # Create a nfsroot tar file which can easily be extracted (containing all
 # files including proper symlinks).
@@ -25,4 +25,4 @@ $(SOME_DEST)/nfsroot.tar.gz: $(INITRD) $(SOME_DEST)/$(EXTRANAME)vmlinux.srec
 	mkdir -p $(TEMP)/nfsroot
 	cp -r $(INITRD) $(SOME_DEST)/$(EXTRANAME)vmlinux.srec $(TEMP)/nfsroot
 	(cd $(TEMP); tar czf - nfsroot) > $@
-	./update-manifest $@ "XSS1500 tarball containing the installer nfsroot"
+	update-manifest $@ "XSS1500 tarball containing the installer nfsroot"
