@@ -10,7 +10,7 @@ MANIFEST-KERNEL = "kernel for vmreader ipl"
 
 $(DEST)/debian.exec: boot/s390/exec
 	install -m644 $^ $@
-	./update-manifest $@ "ipl script"
+	update-manifest $@ "ipl script"
 
 $(TEMP)/kernel.debian: $(TEMP)/vmlinuz
 	ln $+ $@
