@@ -26,6 +26,8 @@ debian-installer (20041119) UNRELEASED; urgency=low
       pull udebs from sarge as previously.
     - Fix SUITE setting so debian/rules can override it. I guess this never
       worked as intended before!
+    - Move all utilities in build/ into build/util/, except daily-build,
+      which is hardcoded in many cron jobs.
   * Thiemo Seufer
     - Do an e2fsck for the extra floppy images.
     - Handle sparse files in cramfs images more efficiently.
